syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/events-processing-proto/gen/proto/go/api/grpc/v1/opportunity;opportunity_grpc_service";

enum OpportunityMaskField {
  OPPORTUNITY_PROPERTY_NONE = 0; // No property, ignored by the server
  OPPORTUNITY_PROPERTY_ALL = 1; // All properties, if present in the list all other properties are ignored
  OPPORTUNITY_PROPERTY_NAME = 2;
  OPPORTUNITY_PROPERTY_AMOUNT = 3;
  OPPORTUNITY_PROPERTY_COMMENTS = 4;
  OPPORTUNITY_PROPERTY_RENEWAL_LIKELIHOOD = 5;
  OPPORTUNITY_PROPERTY_MAX_AMOUNT = 6;
}

// Define an enum for internalType
enum OpportunityInternalType {
  NBO = 0;
  UPSELL = 1;
  CROSS_SELL = 2;
}

// Define an enum for internalStage
enum OpportunityInternalStage {
  OPEN = 0;
  EVALUATING = 1;
  CLOSED_WON = 2;
  CLOSED_LOST = 3;
}

enum RenewalLikelihood {
  HIGH_RENEWAL = 0;
  MEDIUM_RENEWAL = 1;
  LOW_RENEWAL = 2;
  ZERO_RENEWAL = 3;
}

message CreateOpportunityGrpcRequest {
  string tenant = 2;
  string loggedInUserId = 3;
  string name = 4;
  double amount = 5;
  OpportunityInternalType internalType = 6;
  string externalType = 7;
  OpportunityInternalStage internalStage = 8;
  string externalStage = 9;
  google.protobuf.Timestamp estimatedCloseDate = 10;
  string ownerUserId = 11;
  string createdByUserId = 12;
  google.protobuf.Timestamp createdAt = 13;
  google.protobuf.Timestamp updatedAt = 14;
  string generalNotes = 15;
  string nextSteps = 16;
  SourceFields sourceFields = 17;
  ExternalSystemFields externalSystemFields = 18;
  string organizationId = 19;
}

message CreateRenewalOpportunityGrpcRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string contractId = 3;
  RenewalLikelihood renewalLikelihood = 4;
  SourceFields sourceFields = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
}

message UpdateRenewalOpportunityGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string comments = 4;
  RenewalLikelihood renewalLikelihood = 5;
  google.protobuf.Timestamp updatedAt = 6;
  double amount = 7;
  SourceFields sourceFields = 8;
  repeated OpportunityMaskField fieldsMask = 9;
  string ownerUserId = 10;
}

message UpdateOpportunityGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string name = 4;
  double amount = 5;
  double maxAmount = 6;
  string externalType = 7;
  string externalStage = 9;
  google.protobuf.Timestamp estimatedCloseDate = 10;
  string ownerUserId = 11;
  string createdByUserId = 12;
  google.protobuf.Timestamp updatedAt = 14;
  string generalNotes = 15;
  string nextSteps = 16;
  SourceFields sourceFields = 17;
  ExternalSystemFields externalSystemFields = 18;
  repeated OpportunityMaskField fieldsMask = 19;
}

message CloseLooseOpportunityGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  google.protobuf.Timestamp closedAt = 5;
}

message CloseWinOpportunityGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  google.protobuf.Timestamp closedAt = 5;
}

message UpdateRenewalOpportunityNextCycleDateGrpcRequest {
  string opportunityId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  google.protobuf.Timestamp renewedAt = 5;
}

message OpportunityIdGrpcResponse {
  string id = 1;
}

service opportunityGrpcService {
  rpc CreateOpportunity(CreateOpportunityGrpcRequest) returns (OpportunityIdGrpcResponse);
  rpc CreateRenewalOpportunity(CreateRenewalOpportunityGrpcRequest) returns (OpportunityIdGrpcResponse);
  rpc UpdateRenewalOpportunity(UpdateRenewalOpportunityGrpcRequest) returns (OpportunityIdGrpcResponse);
  rpc UpdateOpportunity(UpdateOpportunityGrpcRequest) returns (OpportunityIdGrpcResponse);
  rpc CloseLooseOpportunity(CloseLooseOpportunityGrpcRequest) returns (OpportunityIdGrpcResponse);
  rpc CloseWinOpportunity(CloseWinOpportunityGrpcRequest) returns (OpportunityIdGrpcResponse);
  rpc UpdateRenewalOpportunityNextCycleDate(UpdateRenewalOpportunityNextCycleDateGrpcRequest) returns (OpportunityIdGrpcResponse);
}
